# illicit-gambling-detector

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  SETUP_GUIDE.md  TECHNICAL_REPORT.md  keywords.json  main.py  pyproject.toml  results.json  settings.json  test_gemini.py
.claude/: settings.local.json
dashboard/: app.js  style.css
docs/: README.md  index.html
src/: crawler.py  database.py  gemini_classifier.py  json_storage.py  keyword_manager.py  search_engine.py  url_extractor.py
